--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,6 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a multi-line script
-        run: |
-          curl 
-          -X POST 
-          -H "Accept: application/vnd.github.v3+json" 
-          https://api.github.com/repos/MyCoolProjects/ShopManager/dispatches 
-          -d '{"event_type":"ping_repo"}'.
+      - name: Run a single-line script
+        run: curl -X POST -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/MyCoolProjects/ShopManager/dispatches -d '{"event_type":"ping_repo"}'
            
