--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,8 @@ jobs:
       - name: Run a single-line script
         run: |
           curl -X POST -H "Accept: application/vnd.github.v3+json" -H 'authorization: Bearer ${{ secrets.TOKEN }}' https://api.github.com/repos/MyCoolProjects/ShopManager/dispatches -d '{"event_type":"ping_repo"}'
-           
+  
+      - name: Commit and push
+        run: |
+          git commit
+          git push
