--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
-    "react-scripts": "^3.4.3"
+    "react-responsive-modal": "^5.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
