--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a single-line script
         run: |
-          curl -X POST -H "Accept: application/vnd.github.v3+json" -H 'authorization: Bearer ${{ secrets.TOKEN }}' https://api.github.com/repos/MyCoolProjects/ShopManager/dispatches -d '{"event_type":"push-new-client"}'
+          curl -X POST -H "Accept: application/vnd.github.v3+json" -H 'authorization: Bearer ${{ secrets.TOKEN }}' https://api.github.com/repos/MyCoolProjects/ShopManager/dispatches -d '{"event_type":"push_new_client"}'
